# Scratch3D

./: .gitignore  .gitmodules  Build.bat  Build_Run.bat  CMakeLists.txt  Readme.md
Glitter/Sources/: main.cpp
Samples/: mesh.hpp
scratch/assets/shaders/: entity-selection.frag  entity-selection.vert  lit.vert  unlit.frag  unlit.vert
scratch/models/stone-man/: Stone.mtl
scratch/shaders/: entity-selection.vert  lit.frag  lit.vert  unlit.frag
scratch/src/: main.cpp  main.h  main.hpp  managers.cpp  managers.h
scratch/src/camera/: camera.cpp  camera.h  camera.hpp
scratch/src/color/: color.cpp  color.h
scratch/src/converter/: stringConverter.cpp  stringConverter.h  string_converter.cpp  string_converter.h
scratch/src/entity/: entity-factory.cpp  entity-factory.h  entity.cpp  entity.h  entity.hpp  entity_component.cpp  entity_component.h  id_factory.cpp  id_factory.h
scratch/src/graphics/: material.cpp  material.h  material.hpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  modelRenderable.cpp  modelRenderable.h  model_renderable.cpp  model_renderable.h  render_system.cpp  render_system.h  renderable.cpp  renderable.h  shader.cpp  shader.h
scratch/src/gui/: main_menu_bar.cpp  main_menu_bar.h  material_props_widget.cpp  material_props_widget.h  scene_heirarchy.cpp  scene_heirarchy.h  transform_gizmo.cpp  transform_gizmo.h
scratch/src/lights/: directionalLight.cpp  directionalLight.h  directional_light.cpp  directional_light.h
scratch/src/material/: material.hpp
scratch/src/mesh/: mesh.hpp
scratch/src/model/: model.cpp  model.h  model.hpp
scratch/src/renderable/: modelRenderable.cpp  modelRenderable.h  renderable.h
scratch/src/resources/: resource_manager.cpp  resource_manager.h  shader_library.cpp  shader_library.h
scratch/src/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_node.cpp  scene_node.h
scratch/src/shader/: shader.cpp  shader.h
scratch/src/time/: scratch_time.cpp  scratch_time.h
scratch/src/utilities/: assert.h
